--- a/XNLeasureTechnicalTask/App.xaml
+++ b/XNLeasureTechnicalTask/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="XNLeasureTechnicalTask.App"
+﻿<prism:PrismApplication x:Class="XNLeasureTechnicalTask.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:XNLeasureTechnicalTask"
-             StartupUri="MainWindow.xaml">
+             xmlns:prism="http://prismlibrary.com/">
     <Application.Resources>
-         
     </Application.Resources>
-</Application>
+</prism:PrismApplication>
